FIX: forms validation and form gap

--- a/src/pages/Tribute/style.less
+++ b/src/pages/Tribute/style.less
@@ -37,3 +37,8 @@
     }
   }
 }
+
+.gridbox {
+  display: grid;
+  grid-gap:0.9375rem;
+}
